# potocolom

./: .dockerignore  .gitignore  COMMERCIAL.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md
.cursor/rules/: ascii-hyphen.mdc
.github/: dependabot.yml
.github/workflows/: backend.yml  ci.yml  frontend.yml  simulation.yml  worker.yml
backend/: alembic.ini  pyproject.toml
backend/app/: auth.py  benchmark.py  db.py  estimates.py  files.py  gpu_samples.py  jobs.py  logs.py  main.py  manifests.py  metrics.py  model_timings.json  realtime.py  registry.py  security.py  settings.py  storage.py  studio.py  tables.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_lineage_and_thumbnails.py  0003_gpu_samples_and_job_timestamps.py  0004_job_pipeline_phases.py
backend/tests/: conftest.py  test_api.py  test_estimates.py  test_jobs.py  test_main.py  test_manifests.py  test_metrics.py  test_realtime.py  test_security.py  test_storage.py  test_studio.py
deploy/compose/: compose.smoke.yml  compose.yml  dev.yml
deploy/docker/: Dockerfile.api  Dockerfile.worker-cuda  Dockerfile.worker-rocm  Dockerfile.worker-sim
docs/: api.md  architecture.md  aws-setup.md  blueprint.md  cloud-delivery.md  cloud-infrastructure.md  connection-handling.md  decisions.md  deployment-profiles.md  illusions.md  local-development.md  metrics.md  repository-boundary.md  self-hosted-runner.md  self-hosting.md  third-party-models.md
docs/diagrams/: potocolom.drawio  whitepaper-under-the-hood.mmd
frontend/: .env  .gitignore  .prettierignore  package-lock.json  package.json  vite.config.ts  vite.waitlist-proxy.js
frontend/scripts/: compare-collages.mjs  generate-gallery-images.mjs  generate-hero-images.mjs  generate-hero-preview.mjs  verify-csp.mjs
frontend/src/: app.css  app.html
frontend/src/lib/: benchmark.ts  collage-images.ts  collage-variants.ts  gpu-estimate.ts  hero-images.json  i18n.svelte.ts  latent-canvas-scene.ts  model-params.ts  model-specs.ts  prompt-marquee-prompts.ts  studio-benchmark-sessions.ts  studio-demo-metrics.ts  studio-gpu-chart.ts  studio-gpu-history.ts  studio-gpu-sampler.ts  studio-gpu-timeline.ts  studio-metrics-range.ts  studio-models.ts  studio-session-job-stats.ts  studio-session-metrics.ts  studio-session-pipeline-metrics.ts  studio.svelte.ts
frontend/src/lib/components/: ForkTerminal.svelte  HeroImageField.svelte  LanguageToggle.svelte  LatentCanvas.svelte  PromptMarquee.svelte  PromptMarqueeRow.svelte  ScrollToTop.svelte  SiteLandingHeader.svelte  TextRotate.svelte  UserGenerationGallery.svelte  WaitlistForm.svelte  app-sidebar.svelte  benchmark-category-radar.svelte  benchmark-comparisons.svelte  generate-panel.svelte  history-strip.svelte  nav-gallery.svelte  nav-history.svelte  nav-main.svelte  nav-metrics.svelte  nav-models.svelte  nav-playground.svelte  nav-projects.svelte  nav-secondary.svelte  nav-user.svelte  param-slider-field.svelte  search-form.svelte  site-header.svelte  studio-benchmark-chart.svelte  studio-benchmark-run-timeline.svelte  studio-gpu-metric-line-chart.svelte  studio-gpu-timeline-chart.svelte  studio-job-status-chart.svelte  studio-metrics-dashboard.svelte  studio-metrics-panel.svelte  studio-metrics-range-picker.svelte  studio-metrics-sheet.svelte  studio-preview.svelte  studio-session-model-chart.svelte
frontend/src/lib/i18n/: en.json  es.json
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/app/: +page.svelte
frontend/src/routes/benchmark/: +page.svelte  +page.ts
frontend/src/routes/collage-preview/: +page.svelte
frontend/static/: _headers
frontend/static/benchmark/: results.json
scripts/: BENCHMARK.md  benchmark-matrix.json  benchmark-merge.py  benchmark-prompts.json  benchmark.py  cleanup-failed-jobs.py  compile_ab.py  compose-smoke.sh  generate-hero-batch.py  generate.py  hero-batch-prompts.json  hero-benchmark-prompts-b.json  hero-benchmark-prompts-c.json  hero-benchmark-prompts.json  import-images.py  install-actions-runner.sh  run-benchmark-supplements.sh  simulate.py  wait-and-benchmark.sh
worker/: pyproject.toml
worker/models/: dreamshaper-lcm.json  krea-2-turbo.json  realesrgan-fast.json  realesrgan.json  sd-turbo.json  sdxl-base.json  sdxl-fast.json  sdxl-hypersd.json  sdxl-turbo.json  ssd-1b-lightning.json  ssd-1b.json  vega-rt.json
worker/tests/: test_client.py  test_engine.py  test_gpu_metrics.py  test_illusions.py  test_manifests.py  test_memory_ladder.py  test_settings.py  test_upscale.py
worker/worker/: __main__.py  client.py  engine.py  gpu_metrics.py  illusions.py  logs.py  manifests.py  memory_ladder.py  settings.py  upscale.py
(+36 files in other folders)
