[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "potocolom-worker"
version = "0.0.1"
description = "potocolom inference worker"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.4",
    "websockets>=12",
    "httpx>=0.27",
    "pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]
# Install torch for your device first (CUDA wheels from PyPI; ROCm and CPU
# wheels from the matching https://download.pytorch.org/whl/ index), then
# install this extra. See docs/local-development.md for the ROCm notes.
inference = [
    "torch>=2.4",
    "diffusers>=0.30",
    "transformers>=4.44",
    "accelerate>=0.33",
    "peft>=0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
files = ["worker"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["torch.*", "diffusers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
