[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "potocolom-worker"
version = "0.0.1"
description = "potocolom inference worker"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
